copy webpack aliasa to tsconfig paths

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/aphrodite": "^0.5.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
     "react-with-styles": "^3.2.3",
     "react-with-styles-interface-aphrodite": "^5.0.1"
   },
