--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/aphrodite": "^0.5.13",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-with-styles": "^3.2.3",
     "react-with-styles-interface-aphrodite": "^5.0.1"
   },
